# DeTryRepo

./: .gitignore  Algorytm.cpp  GitCommands.txt
Bazy_Danych/: Kolo_1_Poprawa_Nr_1.sql  Lista_1.txt  Lista_2.sql  Lista_3.sql  Lista_4.sql  Lista_LAB_10.sql  Lista_Lab_11.sql  Lista_Lab_8.sql  Lista_Lab_9.sql  TAXI.sql
Grafika_Komputerowa/Sprawozdanie_I_Filtry/: Sprawozdanie_1.cpp
Metody_Programowania/: Zad1Klasy.txt  Zad2Klasy.cpp  Zad2Klasy.txt  Zad3Klasy.cpp  Zad4Klasy.cpp  Zad5Klasy.cpp  Zad5Klasy.txt  Zad6Klasy.cpp  Zad7Klasy  Zad7Klasy.cpp  Zad8Klasy.cpp  kol2_ver1.cpp  kol2_ver2.cpp  kol2_ver3.cpp  kol2_ver4.cpp  kol2ver5.cpp  kolo1.cpp  test.cpp
My_Projects/: Bankomat.cpp
Paradygmaty_Programowania/Lab_1/: Zad_1.fsx  Zad_16.fsx  Zad_3.fsx  Zad_4.fsx  Zad_5.fsx  Zad_8.fsx
Programowanie_Niskopoziomowe/: Lab_1_Zad_1.cpp  Lab_1_Zad_2.cpp
Programowanie_Niskopoziomowe/Lab_2_3/: 2b64b.cpp  asm.asm
Programowanie_Niskopoziomowe/Lab_3/: Sekcja_Zadan_1.asm  Sekcja_Zadan_1.cpp  Zad_1.cpp  Zad_3.asm  Zad_7.cpp  Zad_8.cpp  Zad_9.cpp
Programowanie_Niskopoziomowe/Lab_4/: Zad_10_x64.asm  Zad_10_x64.cpp  Zad_1_64.asm  Zad_1_64.cpp  Zad_2_x64.asm  Zad_2_x64.cpp  Zad_3_x64.asm  Zad_3_x64.cpp  Zad_3_x86.cpp  Zad_4_x64.cpp  Zad_5_x64.cpp  Zad_5_x86.cpp  Zad_6_x86.cpp  Zad_7_x64.cpp  Zad_7_x86.cpp  Zad_8_x64.cpp  Zad_9_x64.asm
Programowanie_Obiektowe/Lab_1/: House.cs  ShallowCopy_3.cs  Zadanie_1.cs
University/Computational_Graphics/: Project.cpp
University/Developer_Environment/Bash/Compilation/: CMakeLists.txt  Makefile
WlasneProjekty/: Lotek.cpp  Szyfrowanie.cpp
(+632 files in other folders)
